force-app/main/default/objects/Consensus_Invoice_Line_Item__c/Consensus_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Consensus Invoice Line Item</label>
    <nameField>
        <label>Consensus Invoice Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consensus Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>