force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Billed_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Billed_Customer_ID__c</fullName>
    <label>Billed Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>