force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Billing_Run_Date_Verify_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Billing_Run_Date_Verify_Date_Format__c</fullName>
    <label>Billing Run Date *Verify Date Format</label>
    <type>Date</type>
</CustomField>