force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Consensus_Amount_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Amount_Breakdown__c</fullName>
    <label>Consensus Amount Breakdown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>