force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Consensus_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Invoice__c</fullName>
    <label>Consensus Invoice</label>
    <referenceTo>Consensus_Invoice__c</referenceTo>
    <relationshipLabel>Consensus Invoice Line Items</relationshipLabel>
    <relationshipName>Consensus_Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>