force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Consensus_Order__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consensus Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Consensus_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>