force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Consensus_Price__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Price__c</fullName>
    <label>Consensus Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>