force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Consensus_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Quantity__c</fullName>
    <label>Consensus Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>