force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Conversion_Date_Oracle_Bill__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date_Oracle_Bill__c</fullName>
    <label>Conversion_Date_Oracle_Bill</label>
    <type>Date</type>
</CustomField>