force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <label>Conversion Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>