force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <label>Conversion Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>