force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>Corp_ID__c</fullName>
    <label>Corp ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>