force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Deferred_Start_Date_Inv__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Start_Date_Inv__c</fullName>
    <label>Deferred Start Date Inv</label>
    <type>Date</type>
</CustomField>