force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Future1__c.field-meta.xml
<CustomField>
    <fullName>Future1__c</fullName>
    <label>Future1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>