force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Future3__c.field-meta.xml
<CustomField>
    <fullName>Future3__c</fullName>
    <label>Future3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>