force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Header_Attribute1__c.field-meta.xml
<CustomField>
    <fullName>Header_Attribute1__c</fullName>
    <label>Header Attribute1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>