force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Header_Attribute3__c.field-meta.xml
<CustomField>
    <fullName>Header_Attribute3__c</fullName>
    <label>Header Attribute3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>