force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Invoice_Line2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line2__c</fullName>
    <label>Invoice Line2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>