force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <label>Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>