force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Line_Number1__c.field-meta.xml
<CustomField>
    <fullName>Line_Number1__c</fullName>
    <label>Line Number1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>