force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Operating_Unit__c.field-meta.xml
<CustomField>
    <fullName>Operating_Unit__c</fullName>
    <label>Operating Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>