force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Oracle_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Invoice_ID__c</fullName>
    <label>Oracle Invoice ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>