force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Payment_Terms_New__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_New__c</fullName>
    <label>Payment Terms New</label>
    <length>100</length>
    <type>Text</type>
</CustomField>