force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Segment1__c.field-meta.xml
<CustomField>
    <fullName>Segment1__c</fullName>
    <label>Segment1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>