force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Segment2__c.field-meta.xml
<CustomField>
    <fullName>Segment2__c</fullName>
    <label>Segment2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>