force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Segment3__c.field-meta.xml
<CustomField>
    <fullName>Segment3__c</fullName>
    <label>Segment3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>