force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/Sign_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Date__c</fullName>
    <label>Sign Up Date</label>
    <type>Date</type>
</CustomField>