force-app/main/default/objects/Consensus_Invoice_Line_Item__c/fields/TRX_Date_Oracle_Bill__c.field-meta.xml
<CustomField>
    <fullName>TRX_Date_Oracle_Bill__c</fullName>
    <label>TRX_Date_Oracle_Bill</label>
    <type>Date</type>
</CustomField>